# SpecVis-good-GPU

./: CMakeLists.txt  FindCUDASDK.cmake  FindGLEW.cmake  FindRTS.cmake  README  datatypes.h  gpuComputeHistogram.h  gpuComputeMetric.h  gpuComputeSpectrum.h  gpuComputeTF.h  gpuCreateTextures.h  gpuInit.cpp  gpuInit.h  gpuMain.cu  main.cpp  metrics.h  parameters.h  project.cpp  project.h  qtSpatialWindow.cpp  qtSpatialWindow.h  qtSpectralWindow.cpp  qtSpectralWindow.h  qtUI.h  qtUI.ui  rtsENVI.h  transferfunc.h
